# mtg-match-history

./: .gitignore  README.md  main.py  pyproject.toml
sql/: db_init.sql  load_from_staging.sql
src/: __init__.py  data_cleaning.py  db_config.py  etl.py  gsheets_interaction.py  postgres_interaction.py
tests/: __init__.py  conftest.py  test_data_cleaning.py  test_etl.py
